syntax = "proto3";

package pb_authen;

import "user.proto";


option go_package = "server-test/server-authen/pb_authen";
// option go_package = "server-test/pb";


message UserResquest{
    UserInfo userinfo = 1;
}

message UserRespone{
    string noti = 1;
}


message SignInResquest{
    UserInfo userinfo = 1;
}

message SignInRespone{
    UserInfo userinfo = 1;
    string token = 2;
}


message AuthenTokenResquest{
   string token = 1;
}

message AuthenTokenRespone{
    string iduser = 1;
}

